--- a/SwiftCart/package.json
+++ b/SwiftCart/package.json
@@ -11,6 +11,8 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
     "svelte": "^4.2.18",
+    "svelte-check": "^3.8.5",
+    "svelte-preprocess": "^6.0.2",
     "vite": "^5.3.4"
   },
   "dependencies": {
